--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Contato</h1>
-    <p>Entre em contato pelo email email@email.com</p>
+    <p>Entre em contato pelo telefone (21)3325-4445</p>
 </body>
 </html>
